<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_page"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/main_page"/>
        <item
            android:id="@+id/collect"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/collect"/>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/another_setting">
            <menu>
                <item
                    android:id="@+id/theme"
                    android:icon="@drawable/ic_brightness_6_black_24dp"
                    android:title="@string/chose_theme"/>
                <item
                    android:id="@+id/setting"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/setting"/>
                <item
                    android:id="@+id/about"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="@string/about"/>
            </menu>
        </item>

    </group>
</menu>