<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/p_view"
    android:layout_marginTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/base_settings"
            android:textColor="@color/colorPrimary"/>

        <RelativeLayout
            android:id="@+id/rl_setting_no_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_setting_no_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_no_img"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_setting_no_img"
                android:text="@string/settings_no_img_explain"/>

            <CheckBox
                android:id="@+id/cb_setting_no_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:buttonTint="@color/colorPrimary"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>

        <RelativeLayout
            android:id="@+id/rl_setting_inlay_browser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_setting_inlay_browser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_inlay_browser"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_setting_inlay_browser"
                android:text="@string/setting_inlay_browser_explain"/>

            <CheckBox
                android:id="@+id/cb_setting_inlay_browser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"/>

        </RelativeLayout>

        <!--<View-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="0.5dp"-->
        <!--android:background="@color/gray"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/other_settings"
            android:textColor="@color/colorPrimary"/>

        <RelativeLayout
            android:id="@+id/rl_setting_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_clear_img_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_clear_img_cache"
                android:textColor="@color/black"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>